@@ -9,6 +9,7 @@ Fixes
 - GraphComponent : Fixed bug that allowed construction with an invalid name (#3436).
 - Layouts : Keyboard shortcuts will now work in detached panels restored with a layout.
 - Rotate/TranslateTool : Fixed a potential crash if targeted mode was used with an empty selection.
+- TabbedContainer : Fixed a bug that caused an exception when the last tab in a container was closed.
 
 0.55.0.0
 ========
